# hiphonix

./: .cproject  .gitignore  .project  .travis.yml  API.md  BUILD.md  CMakeLists.txt  Dockerfile  NOTES.md  README.md  capture.html  package.json  server.js
cmake/: FindDBus.cmake  FindGlib.cmake
contrib/: hiphonix.default  hiphonix.service  hiphonix.spec  init.debian
htdocs/: build-steps.bash  index.html  package.json  project.cson
htdocs/public/: index.html
htdocs/public/fonts/: styles.css
htdocs/sketch/: HiPhonix UI Redesign.sketch
htdocs/sketch/images/covers/: metadata.json
htdocs/src/: api.js  index.css  index.js  socket.js
htdocs/src/App/: index.js
htdocs/src/Splash/: index.js
htdocs/test/: server.js
htdocs/test/fixtures/: MPD_API_GET_BROWSE.json  MPD_API_GET_QUEUE.json  MPD_API_SEARCH.json  MPD_API_SET_NEXT.json  MPD_API_SET_PLAY.json  MPD_API_SET_SEEK.json  OUTPUTS.json  STATE.json  STATE_PAUSED.json  UPDATE_QUEUE.json  index.js
public/: index.html
public/css/: styles.css
sketch/: HiPhonix UI Redesign.sketch  playlists.json
src/: api.js  connman.c  connman.h  hiphonix.c  http_server.c  http_server.h  index.css  index.js  index2.css  net.c  net.h  nm.c  nm.h  socket.js  supplicant.c  supplicant.h  ympd.c  ympd.h
src/App/: index.js
src/Playback/: index.js
src/Settings/: index.js
src/Splash/: styles.css
src/gdbus/: client.c  gdbus.h  list-connections.c  list-connections.h  mainloop.c  object.c  polkit.c  proxy.c  proxy.h  watch.c
src/gsupplicant/: dbus.c  dbus.h  gsupplicant.h  supplicant.c
test/: client.js  index.js  server.js
test/fixtures/: MPD_API_GET_BROWSE.json  MPD_API_GET_OUTPUTS.json  MPD_API_GET_PLAYLIST.json  MPD_API_SEARCH.json  NET_LIST.json  OUTPUTS.json  STATE.json  index.js
test/fixtures/sda1/: MPD_API_GET_BROWSE.json
test/spec/: api.js  socket.js
tools/: mkdata.c  mkdata.pl
ympd/src/: mpd_client.c  net.c  net.h  ympd.c
